Mon Sep 24 10:38:55 2012  Luis Lavena  <luislavena@gmail.com>

	* test/win32ole/test_win32ole_method.rb (is_ruby64?): Correct platform
	  used to identify mingw-w64 (x64-mingw32). Patch by Hiroshi Shirosaki.
	  [ruby-core:46651][Bug #6782]

Mon Sep 24 10:37:56 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/test/unit/parallel.rb: workaround fix for rubygems.
	  RubyGems can't find rake if the source directory is not equal to
	  the directory which is running the test. [Bug #6604]

Fri Sep 21 19:53:38 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_call): should convert a Bignum value to
	  unsigned long long on Win64.
	  [ruby-core:44636][Bug #6364] reported by raylinn@gmail.com (ray linn)

Fri Sep 21 18:45:20 2012  Luis Lavena  <luislavena@gmail.com>

	* include/ruby/win32.h: undef stat to silence mingw-w64 stat
	  redefinition warnings (GCC 4.6.3).

Fri Sep 21 17:54:54 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: add -Wall always.

Thu Sep 20 10:23:37 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_cond_initialize): destroy condattr
	  after using it. Patch by Stanislav Sedov. Thank you.
	  [Bug #7041] [ruby-core:47619]

Sun Sep  9 23:01:43 2012  Tanaka Akira  <akr@fsij.org>

	* ext/zlib/extconf.rb: detect z_crc_t type which will be defined
	  since zlib-1.2.7.

	* ext/zlib/zlib.c (rb_zlib_crc_table): use z_crc_t if available.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/zlib/extconf.rb: Use an exception instaed of bare puts.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/psych/extconf.rb: Use an exception instaed of bare abort.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/fiddle/extconf.rb: Use an exception instaed of bare abort.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/readline/extconf.rb: Use an exception instead of bare exit.
