@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 275
+#define RUBY_PATCHLEVEL 276
 
 #define RUBY_RELEASE_DATE "2012-09-24"
 #define RUBY_RELEASE_YEAR 2012
